fix issues and add junit